# weather-aggregator

./: .gitignore  alembic.ini  pyproject.toml  requirements.txt
Secret_Project/: city_data.py  configs.py  database_session.py  forecast_response.py  forecast_service.py  geo_point.py  load_geo_point.py  log_func.py  main.py  models.py  services_api_root.py  shemas.py  weather_parsers.py
Secret_Project/migrations/: env.py
Secret_Project/migrations/versions/: 54cdec2fa7e1_initialoone.py  93e9a8723fd7_initialtwo.py  d7a975aee046_initial.py
Secret_Project/static/: script.js  style.css
Secret_Project/templates/: index.html
